--- a/f.html
+++ b/f.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document 1</title>
 </head>
 <body>
-   new thing added
+   new thing added 1
 </body>
 </html>
